  * add support for ejecting removable media on Solaris
  * fix stuttering playback of some realmedia streams

xine-lib (1-rc4a)
  * audio out now uses a more user friendly "Speaker arrangement" config item;
    this defaults to stereo, so if you use a different speaker arragement, like
    5.1 or other surround setups, you have to reconfigure xine using this item
  * fix possible crash in CDDB queries
  * work around the gnome-vfs sftp: method having a max read size of 256k,
    makes it possible to play AVIs over sftp:
  * added documentation for the post plugin system to the hackersguide
  * add support for decoding On2 VP5 and VP6 using Windows dlls
  * fix bugs with the colorkey overlay support introduced in rc4. under certain
    circunstances, parts of the images were not shown.
  * enable colorkey overlays for more cards using XVideo and vidix drivers.
  * make it possible for the CDDA plugin to give away Musicbrainz CD Index ID
  * several DVB improvements. add dvbs://, dvbc:// and dvbt:// mrls
  * fix static noise produced by WMA streams in some systems

xine-lib (1-rc4)
  * experimental DTS software decoder using libdts
  * SPU decoder: timestamp handling for NAV packets fixes the menu on the first
    DVD of "24" season 1
  * improved precision in metronom's audio timestamp calculation fixes some
    sync problems, especially in long-running applications
  * fix playing mpeg vob files with LPCM
  * correct field order when deinterlacing bottom-field-first streams
  * fix network cdda playback
  * fix channel swapping in wave demuxer (lpcm)
  * colorkey support for drawing OSD (XVideo only - fix some flickering)
  * avoid possible segfaults in cdda
  * libvcd updated to 0.7.20
  * libcdio updated to 0.68
  * libmad updated to 0.15.1b
  * build improvements - different source and build directory, translations
  * avoid deadlock with raw AC3 streams and visualization
  * fix 24 bpp RGB output - may affect some users of xshm and fb